# Homegear-MAX

./: .project  CMakeLists.txt  Makefile  README.md  config.h  config.status  configure  configure.ac  libtool  makeCoverity.sh  makeRelease.sh
debian/: changelog  control  copyright  postinst  postrm  rules
misc/Config Directory/: max.conf
misc/Device Description Files/: BC-PB-2-WM.xml  BC-RT-TRX-CyG-2.xml  BC-RT-TRX-CyG-3.xml  BC-RT-TRX-CyG.xml  BC-RT-TRX-CyN.xml  BC-SC-Rd-WM-2.xml  BC-SC-Rd-WM.xml  BC-TC-C-WM-2.xml  BC-TC-C-WM-4.xml  BC-TS-Sw-Pl.xml
misc/UI Translations/de-DE/: admin.de-DE.yaml
misc/UI Translations/en-US/: admin.en-US.yaml
src/: Factory.cpp  Factory.h  GD.cpp  GD.h  Interfaces.cpp  Interfaces.h  MAX.cpp  MAX.h  MAXCentral.cpp  MAXCentral.h  MAXDevice.cpp  MAXDeviceTypes.h  MAXMessage.cpp  MAXMessage.h  MAXMessages.cpp  MAXMessages.h  MAXPacket.cpp  MAXPacket.h  MAXPeer.cpp  MAXPeer.h  Makefile  Makefile.am  Makefile.in  PacketManager.cpp  PacketManager.h  PacketQueue.cpp  PacketQueue.h  PendingQueues.cpp  PendingQueues.h  QueueManager.cpp  QueueManager.h
src/.deps/: Factory.Plo  GD.Plo  MAX.Plo  MAXDevice.Plo  MAXMessage.Plo  MAXMessages.Plo  MAXPacket.Plo  MAXPeer.Plo  PacketManager.Plo  PacketQueue.Plo  PendingQueues.Plo  QueueManager.Plo
src/LogicalDevices/: MAXCentral.cpp  MAXSpyDevice.cpp
src/LogicalDevices/.deps/: MAXCentral.Plo  MAXSpyDevice.Plo
src/PhysicalInterfaces/: COC.cpp  COC.h  CUL.cpp  CUL.h  Cunx.cpp  Cunx.h  HomegearGateway.cpp  HomegearGateway.h  IMaxInterface.cpp  IMaxInterface.h  TICC1100.cpp  TICC1100.h
src/PhysicalInterfaces/.deps/: COC.Plo  CUL.Plo  TICC1100.Plo
